test/asm/invalid-ldh.err
error: Source address $11 not between $FF00 to $FFFF
    at invalid-ldh.asm(2)
error: Source address $22 not between $FF00 to $FFFF
    at invalid-ldh.asm(3)
Assembly aborted with 2 errors!
